fix gap home mobile

--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -21,3 +21,7 @@
   align-items: center;
   gap: 1em;
 }
+
+.margin {
+  margin: 0;
+}
