--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -21,6 +21,14 @@
   align-items: center;
   gap: 2vw;
 
+  &__mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+    gap: 15vw;
+  }
+
   &__vector {
     display: flex;
     justify-content: center;
